--- a/SAM/Views/UserManagement/UserDetails.cshtml
+++ b/SAM/Views/UserManagement/UserDetails.cshtml
@@ -19,7 +19,7 @@
                 <i class="bi bi-pencil"></i> Edit
             </a>
         }
-        <a asp-action="Users" asp-route-companyId="@Model.CompanyId" class="btn btn-secondary">
+        <a asp-action="Index" asp-route-companyId="@Model.CompanyId" class="btn btn-secondary">
             <i class="bi bi-arrow-left"></i> Back to List
         </a>
     </div>
