--- a/SAM/wwwroot/css/custom.css
+++ b/SAM/wwwroot/css/custom.css
@@ -1727,7 +1727,7 @@ small {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: var(--text-secondary);
+  color: var(--gray-300);
   text-decoration: none;
   transition: var(--transition-base);
   border-radius: 0.375rem;
@@ -1755,18 +1755,22 @@ small {
 .sidebar-nav .nav-link {
   position: relative;
 }
-
+.border-separate {
+    margin-top: auto;
+    padding-top: 0.3rem;
+    border-top: 1px solid var(--secondary);
+}
 .sidebar-nav .nav-link::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 0;
-  height: 0;
-  background-color: var(--primary);
-  border-radius: 0 4px 4px 0;
-  transition: width 0.2s ease, height 0.2s ease;
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 0;
+    height: 0;
+    background-color: var(--primary);
+    border-radius: 0 4px 4px 0;
+    transition: width 0.2s ease, height 0.2s ease;
 }
 
 .sidebar-nav .nav-link:hover {
@@ -2173,7 +2177,7 @@ small {
   align-items: center;
   font-size: var(--font-size-xl);
   font-weight: var(--font-weight-bold);
-  color: var(--secondary);
+  color: var(--gray-300);
   text-decoration: none;
   transition: var(--transition-fast);
   gap: 0.75rem;
@@ -2338,7 +2342,7 @@ small {
   padding: 0.55rem 1rem;
   background: none;
   border: none;
-  color: var(--text-secondary);
+  color: var(--gray-300);
   font-size: var(--font-size-base);
   font-weight: var(--font-weight-medium);
   text-align: left;
