--- a/SAM/Views/Shared/Partials/_Navigation.cshtml
+++ b/SAM/Views/Shared/Partials/_Navigation.cshtml
@@ -116,9 +116,9 @@
         @if (isCompanyAdmin)
         {
             <li class="nav-item" role="none">
-                <a class="nav-link" asp-controller="UserManagement" asp-action="Index" role="menuitem" data-tooltip="User Management">
+                <a class="nav-link" asp-controller="UserManagement" asp-action="Index" role="menuitem" data-tooltip="Users">
                     <i class="bi bi-people"></i>
-                    <span class="nav-link-text">User Management</span>
+                    <span class="nav-link-text">Users</span>
                 </a>
             </li>
         }
@@ -130,9 +130,9 @@
         <div class="sidebar-footer">
             <ul class="sidebar-nav" role="menubar">
                 <li class="nav-item" role="none">
-                    <a class="nav-link" asp-controller="CompanyManagement" asp-action="Index" role="menuitem" data-tooltip="Company Management">
+                    <a class="nav-link" asp-controller="CompanyManagement" asp-action="Index" role="menuitem" data-tooltip="Manage Companies">
                         <i class="bi bi-building-gear"></i>
-                        <span class="nav-link-text">Company Management</span>
+                        <span class="nav-link-text">Manage Companies</span>
                     </a>
                 </li>
                 <li class="nav-item" role="none">
